RESOLVED FIXED171243
REGRESSION (214503): Webkit crash under RenderElement::repaintForPausedImageAnimationsIfNeeded() when scrolling giphy pages
https://bugs.webkit.org/show_bug.cgi?id=171243
Summary REGRESSION (214503): Webkit crash under RenderElement::repaintForPausedImageA...
Chris Dumez
Reported 2017-04-24 12:54:48 PDT
Webkit crashes under RenderElement::repaintForPausedImageAnimationsIfNeeded() when scrolling giphy pages after r214503.
Attachments
Patch (8.96 KB, patch)
2017-04-24 13:47 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-04-24 12:55:25 PDT
Chris Dumez
Comment 2 2017-04-24 13:47:27 PDT
WebKit Commit Bot
Comment 3 2017-04-24 15:46:14 PDT
Comment on attachment 308004 [details] Patch Clearing flags on attachment: 308004 Committed r215700: <http://trac.webkit.org/changeset/215700>
WebKit Commit Bot
Comment 4 2017-04-24 15:46:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.